# MediaForge-core

./: .gitignore  CMakeLists.txt  README.md
cmake/: cpp_coreConfig.cmake.in
include/cpp_core/: core.hpp  enums.hpp  errors.hpp  image_io.hpp  image_processor.hpp  options.hpp  transforms.hpp  vimage.hpp
include/cpp_core/utils/: enum_utils.hpp
napi/: binding.gyp  image_processor_binding.cpp  package.json
src/: core.cpp  errors.cpp  image_io.cpp  image_processor.cpp  main.cpp  transforms.cpp  vimage.cpp
src/transforms/: colour.cpp  crop.cpp  resize.cpp  rotate.cpp  sharpen.cpp  watermark.cpp
